<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.nmdp.service</groupId>
        <artifactId>service-parent</artifactId>
        <version>2</version>
    </parent>
    <artifactId>epitope-multimodule</artifactId>
    <name>epitope-multimodule</name>
    <description>T-cell epitope group matching service for HLA-DPB1 locus.</description>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>db</module>
        <module>domain</module>
        <module>fitnesse</module>
        <module>service</module>
        <module>resource</module>
        <module>resource-impl</module>
        <module>dropwizard</module>
        <module>client</module>
        <module>tools</module>
    </modules>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.2</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.nmdp.gl</groupId>
                <artifactId>gl-client-local</artifactId>
                <version>1.0</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-log4j12</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.google.inject</groupId>
                <artifactId>guice</artifactId>
                <version>4.0</version>
            </dependency>
            <dependency>
                <groupId>org.nmdp.gl</groupId>
                <artifactId>gl-service</artifactId>
                <version>1.0</version>
            </dependency>
            <dependency>
                <groupId>org.nmdp.service</groupId>
                <artifactId>common-service</artifactId>
                <version>1.1-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>org.nmdp.service</groupId>
                <artifactId>common-dropwizard</artifactId>
                <version>1.1-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>3.8.11.1</version>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>3.2.1</version>
            </dependency>
            <dependency>
                <groupId>io.dropwizard.modules</groupId>
                <artifactId>dropwizard-flyway</artifactId>
                <version>0.8.0-2</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.12</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>1.1.3</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-csv</artifactId>
                <version>2.4.0</version>
            </dependency>
            <dependency>
                <groupId>com.googlecode.multithreadedtc</groupId>
                <artifactId>multithreadedtc</artifactId>
                <version>1.01</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
